# python-fastapi-oauth2-jwt

./: .env.sample  .gitignore  Dockerfile  README.md  compose.prod.yml  compose.yml  pyproject.toml
app/: auth.py  main.py  settings.py
